--- a/testing/index.html
+++ b/testing/index.html
@@ -2,19 +2,9 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>Seite 2</title>
+  <title>Testing</title>
 </head>
 <body>
-  <h1>Gehen Sie zurück zur Seite 1</h1>
-  <script>
-  (function() {
-    function interrupt() {
-      var start = Date.now();
-      while(Date.now() - start < 1000);
-      setTimeout(interrupt, 10);
-    }
-    interrupt();
-  })();
-</script>
+  <h1>Testing</h1>
 </body>
 </html>
