--- a/testing/noopener.html
+++ b/testing/noopener.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>Seite 2</title>
+  <title>Seite 2 - noopener</title>
 </head>
 <body>
   <h1>Gehen Sie zurück zur Seite 1</h1>
